server-rs/compile_errors.txt
    Checking server-rs v1.0.0 (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\server-rs)
warning: unused import: `serde_json::Value`
 --> src\main.rs:3:5
  |
3 | use serde_json::Value;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `serde_json::Value`
  --> src\state.rs:11:5
   |
11 | use serde_json::Value;
   |     ^^^^^^^^^^^^^^^^^

warning: unused import: `crate::telemetry::TelemetryLayer`
 --> src\startup.rs:2:5
  |
2 | use crate::telemetry::TelemetryLayer;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `tokio::sync::broadcast`
 --> src\startup.rs:3:5
  |
3 | use tokio::sync::broadcast;
  |     ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `serde_json::json`
 --> src\telemetry.rs:4:5
  |
4 | use serde_json::json;
  |     ^^^^^^^^^^^^^^^^

error[E0599]: no method named `span` found for struct `opentelemetry::Context` in the current scope
   --> src\agent\runner\mod.rs:74:44
    |
 74 |         let otel_trace_id = span.context().span().span_context().trace_id().to_string();
    |                                            ^^^^ private field, not a method
    |
   ::: C:\Users\Home Office_PC\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\opentelemetry-0.21.0\src\trace\context.rs:252:8
    |
252 |     fn span(&self) -> SpanRef<'_>;
    |        ---- the method is available for `opentelemetry::Context` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `TraceContextExt` which provides `span` is implemented but not in scope; perhaps you want to import it
    |
  1 + use opentelemetry::trace::TraceContextExt;
    |

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\routes\audio.rs:162:18
    |
162 |     let config = crate::agent::types::ModelConfig {
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\agent\runner\swarm.rs:111:28
    |
111 |                     model: crate::agent::types::ModelConfig {
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
  --> src\agent\persistence.rs:84:20
   |
84 |             model: crate::agent::types::ModelConfig {
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\agent\runner\mod.rs:303:13
    |
303 |             ModelConfig {
    |             ^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\agent\runner\mod.rs:326:13
    |
326 |             ModelConfig {
    |             ^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
  --> src\agent\registry.rs:79:16
   |
79 |         model: ModelConfig {
   |                ^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\agent\registry.rs:125:16
    |
125 |         model: ModelConfig {
    |                ^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\agent\registry.rs:171:16
    |
171 |         model: ModelConfig {
    |                ^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\agent\registry.rs:217:16
    |
217 |         model: ModelConfig {
    |                ^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\agent\registry.rs:259:16
    |
259 |         model: ModelConfig {
    |                ^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\agent\registry.rs:301:16
    |
301 |         model: ModelConfig {
    |                ^^^^^^^^^^^ missing `skills` and `workflows`

error[E0609]: no field `parent_context` on type `&OtelData`
  --> src\telemetry.rs:37:37
   |
37 |             trace_id = Some(otel_cx.parent_context.span().span_context().trace_id().to_string());
   |                                     ^^^^^^^^^^^^^^ unknown field
   |
   = note: available fields are: `parent_cx`, `builder`

warning: unused variable: `span`
  --> src\telemetry.rs:78:13
   |
78 |         let span = ctx.span(&id).expect("Span not found");
   |             ^^^^ help: if this is intentional, prefix it with an underscore: `_span`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0063, E0599, E0609.
For more information about an error, try `rustc --explain E0063`.
warning: `server-rs` (bin "server-rs") generated 6 warnings
error: could not compile `server-rs` (bin "server-rs") due to 13 previous errors; 6 warnings emitted
